# STM32L431_CAN

./: .cproject  .gitignore  .mxproject  .project  CAN 2.cfg  CAN 2.ioc  app_debug_log.txt  app_task_log.txt  build_log.txt  debug_app.bat  debug_structure.bat  diagnose_install.bat  fix-servo-freezing.patch  fix_and_install.bat  fix_app_copy_and_install.bat  fix_app_log.txt  fix_full_log.txt  fix_gradle_full.bat  fix_log.txt  flash_stm32.bat  install_app.bat  move_to_c_root.bat  run_app_task.bat  structure_log.txt
CANphon_8.10 NDK gps2  PAyph/CANphon_8.10 NDK gps2  PAyph/CANphon_8.8 gps2  PAyph/CANphon_1/: gps_comparator.py  kiosk_revert.ps1  kiosk_setup.ps1  rocket_simulator.py  run_viewer.bat  telemetry_viewer.py  telemetry_viewer_v3.py
CANphon_8.10 NDK gps2  PAyph/CANphon_8.10 NDK gps2  PAyph/CANphon_8.8 gps2  PAyph/CANphon_1/CANphon/: build_and_run.bat  telemetry_viewer_v3.py  telemetry_viewer_v3_pyqtgraph.py  telemetry_viewer_v4.py
CANphon_8.10 NDK gps2  PAyph/CANphon_8.10 NDK gps2  PAyph/CANphon_8.8 gps2  PAyph/CANphon_1/CANphon/app/src/main/cpp/: CMakeLists.txt  filters.cpp  guidance_controller.cpp  jni_bridge.cpp  kalman_filter.cpp  native_sensors.cpp  object_tracker.cpp  object_tracker.h  servo_protocol.cpp  servo_protocol.h  target_discriminator.cpp  target_discriminator.h  telemetry.cpp  telemetry.h
Core/Inc/: can_bridge.h  led_manager.h  main.h  servo_driver.h  stm32l4xx_it.h
Core/Src/: can_bridge.c  led_manager.c  main.c  servo_driver.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
STM32_Bridge_Debug/: main.c
(+112 files in other folders)
